    slides have actually been translated.
  * Added htmlclean to remove unnecessary content from built
    slides.
  * Added room for ubuntu-upgrade slides.

  [ Lionel Le Folgoc ]
  * Initial import of Xubuntu slides lp: #514011

  [ Evan Dandrea ]
  * Bump release in welcome.html to 10.04.
  * Remove htmlclean as its in universe and not currently worth the MIR.

 -- Dylan McCall <dylan@dylan-laptop>  Tue, 02 Feb 2010 13:09:28 -0800

ubiquity-slideshow-ubuntu (12) lucid; urgency=low

  [ Dylan McCall ]
  * Removed unused overlay image from earlier design.
  * Added HTML comments to slides, which will become translator
    comments when all the pieces are in place. (LP: #435834)
  * Tidied up writing in the following slides:
    f-spot (streamlined discussion of tags), rhythmbox (removed
    codec licensing stuff), documentation (removed subtitles).
    (LP: #480382) (LP: #480383)
  * Consistently italicize names of applications in Ubuntu when
    referred to directly.
  * Consistently refer to applications by their names in the menu
    when directing the user to them.
  * Major adjustment to format for passing parameters to
    slideshow's Javascript via #parameter. Now using
    #?key?key=value  format, for compatibility with
    WebKit.
  * Changed default slide interval for slideshows to 45s
    (LP: #423639)
  
  [ Evan Dandrea ]
  * Put Kubuntu slides in their own directory to avoid having to make
    each slideshow package conflict.
  * Update translations from Launchpad.

 -- Evan Dandrea <evand@ubuntu.com>  Mon, 11 Jan 2010 09:36:06 +0000

ubiquity-slideshow-ubuntu (11) lucid; urgency=low

  [ Dylan McCall ]
  * Adding support for right-to-left languages (LP: #446989).
  * When #rtl is appended to URL, index.html will load the rtl.css
    stylesheet via Javascript.
  * Added link/rtl.css and link/bullet-point.rtl.png, which are
    responsible for little hacks to get right-to-left languages
    looking right.
  * Changed doctype of index.html to HTML5.
